--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -36,13 +36,15 @@ configure_file(common/grpc_fwd.hpp.in common/grpc_fwd.hpp)
 if (VIAMCPPSDK_USE_WALL_WERROR)
   if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(viamsdk PRIVATE -Wall -Werror)
+  elseif (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+   target_compile_options(viamsdk PRIVATE -Wall -Werror)
   elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     target_compile_options(viamsdk PRIVATE -Wall -Werror)
   elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     # Note: Currently, the generated protos throw W4244 and W4267, so turn that back to a warning.
     target_compile_options(viamsdk PRIVATE /W4 /WX /wd4244 /wd4267)
   else()
-    message(ERROR "VIAMCPPSDK_USE_WALL_ERROR is set, but not known how to enable for compiler ID ${CMAKE_CXX_COMPILER_ID}")
+    message(FATAL_ERROR "VIAMCPPSDK_USE_WALL_ERROR is set, but not known how to enable for compiler ID ${CMAKE_CXX_COMPILER_ID}")
   endif()
 endif()
 
