RSDK-10313: Full conan fix (#390)

--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - conanfile.py
       - test_package/conanfile.py
+      - .github/workflows/conan.yml
 
 jobs:
   prepare:
@@ -100,6 +101,8 @@ jobs:
           apt-get update
           apt-get -y dist-upgrade
           DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
+              autoconf \
+              automake \
               build-essential \
               ca-certificates \
               curl \
@@ -120,7 +123,7 @@ jobs:
           sudo echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null
 
           apt-get update
-          apt-get -y install cmake
+          apt-get -y install cmake=3.25.2-0kitware1ubuntu22.04.1 cmake-data=3.25.2-0kitware1ubuntu22.04.1
 
           pip install conan
 
@@ -128,7 +131,7 @@ jobs:
         shell: bash
         run: |
           conan profile detect
-          conan create . --build=missing -s compiler.cppstd=14
+          conan create . --build=missing -s compiler.cppstd=14 -s:a compiler.cppstd=14
 
   build_linux_debian:
     if: github.repository_owner == 'viamrobotics'
@@ -166,6 +169,7 @@ jobs:
           apt-get update
           apt-get -y dist-upgrade
           DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
+              autoconf \
               build-essential \
               ca-certificates \
               cmake \
@@ -204,4 +208,4 @@ jobs:
 
           pip install conan
           conan profile detect
-          conan create . --build=missing -s compiler.cppstd=14
+          conan create . --build=missing -s compiler.cppstd=14 -s:a compiler.cppstd=14
