--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,8 +270,7 @@ elseif(NOT WIN32 OR (CMAKE_SYSTEM_PROCESSOR STREQUAL "X86") OR (CMAKE_SYSTEM_PRO
   set(lvru_system_name ${CMAKE_SYSTEM_NAME})
   if (CMAKE_SYSTEM_NAME STREQUAL "Cygwin")
     set(lvru_system_name "windows")
-  endif()
-  if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+  elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set(lvru_system_name "macosx")
   endif()
   set(lvru_system_processor ${CMAKE_SYSTEM_PROCESSOR})
