--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
         run: mkdir builds
 
       - name: list stuff
-        run: ls ./boost/boost
+        run: ls ./boost/boost/lib
         #run: ls ${{ steps.install-boost.outuputs.BOOST_ROOT }}
 
       - name: Build
@@ -99,6 +99,7 @@ jobs:
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
           BOOST_INCLUDEDIR: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          BOOST_LIBRARYDIR: ${{ steps.install-boost.outputs.BOOST_ROOT }}/lib
 
       - name: Copy
         run: |
