--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
         run: mkdir builds
 
       - name: list stuff
-        run: ls ./boost/boost/lib
+        run: ls ./boost/boost/libs
         #run: ls ${{ steps.install-boost.outuputs.BOOST_ROOT }}
 
       - name: Build
@@ -98,7 +98,7 @@ jobs:
           cmake --build build --target all install -- -v
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-          BOOST_INCLUDEDIR: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          BOOST_INCLUDEDIR: ${{ steps.install-boost.outputs.BOOST_ROOT }}/include
           BOOST_LIBRARYDIR: ${{ steps.install-boost.outputs.BOOST_ROOT }}/lib
 
       - name: Copy
