--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -40,6 +40,52 @@ jobs:
           github.event_name == 'schedule' &&
           steps.git_info.outputs.current_commit == steps.last_successful_commit.outputs.commit-hash
 
+  build_windows:
+    if: github.repository_owner == 'viamrobotics'
+    needs: [prepare]
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: aarch64-apple-darwin
+            platform: macosx_arm64
+          - target: x86_64-apple-darwin
+            platform: macosx_x86_64
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Install cmake
+        uses: ssrobins/install-cmake@v1
+        with:
+          version: 3.27.2
+
+      - name: Install python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install Scoop
+        uses: MinoruSekine/setup-scoop@v4.0.1
+
+      - name: install buf 'n stuff # the official way to install somehow lol
+        run: scoop install buf ninja
+
+      - name: install conan
+        run: py -m pip install conan
+
+      #- name: Install dependencies
+        #run: |
+          #chocolatey install
+          ##brew install python ninja
+          #py -m pip install conan
+
+      - name: Create package
+        run: |
+          conan profile detect
+          conan create . --build=missing -s compiler.cppstd=17
+
   build_macos:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
