--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -48,10 +48,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: aarch64-apple-darwin
-            platform: macosx_arm64
-          - target: x86_64-apple-darwin
-            platform: macosx_x86_64
+          - target: x86_64-windows
+            platform: windows_x86_64
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
