--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,8 +85,8 @@ jobs:
 
       - name: Create package
         run: |
-          conan profile detect
-          conan create . --build=missing -s compiler.cppstd=17
+          py -m conan profile detect
+          py -m conan create . --build=missing -s compiler.cppstd=17
 
       #- name: Build
         #run: |
