--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -74,6 +74,12 @@ jobs:
         uses: crazy-max/ghaction-chocolatey@v3
         with:
           args: install -y conan cmake
+
+      # Ensures that things installed with choco are visible to us
+      - name: refresh env
+        run: |
+          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
+          refreshenv
       #- name: install conan
         #run: py -m pip install conan
 
