--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,6 +93,10 @@ jobs:
         run: |
           conan profile detect
           conan create . --build=missing -s compiler.cppstd=17
+        with:
+          env:
+            CONAN_USER_HOME: c:/cache
+            CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
 
       #- name: Build
         #run: |
