--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -91,11 +91,17 @@ jobs:
 
       - name: Create package
         shell: powershell
+        #conan create . --build=missing -s compiler.cppstd=17 -c:h tools.microsoft.winsdk_version=10.0.17763.0
         run: |
           Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
           refreshenv
           conan profile detect
-          conan create . --build=missing -s compiler.cppstd=17 -c:h tools.microsoft.winsdk_version=10.0.17763.0
+          conan create . `
+            --build=missing `
+            -o "&:shared=False" `
+            -s:h compiler.cppstd=17 `
+            -c:h tools.microsoft:winsdk_version=10.0.17763.0 `
+            -s:h compiler.runtime=static
         env:
           CONAN_USER_HOME: c:/cache
           CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
