--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,6 @@
 name: Build + draft release
 
 on:
-  pull_request:
   workflow_dispatch:
 
 # (erodkin) this is needed to create the release, per https://github.com/softprops/action-gh-release/issues/236
@@ -10,7 +9,7 @@ permissions:
 
 jobs:
   prepare:
-    #if: github.repository_owner == 'viamrobotics'
+    if: github.repository_owner == 'viamrobotics'
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.which_version.outputs.version }}
@@ -33,88 +32,90 @@ jobs:
           releaseName: releases/v${{ steps.which_version.outputs.version }}
           doNotFailIfNotFound: 'true'
 
-      #- name: Cancelling - release already exists
-        #uses: andymckay/cancel-action@0.2
-        #if: steps.release_exists.outputs.id != ''
-
-  build_windows:
-    #if: github.repository_owner == 'viamrobotics'
-    needs: [prepare]
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-windows
-            platform: windows_x86_64
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.prepare.outputs.sha }}
-
-      - name: Install cmake
-        uses: ssrobins/install-cmake@v1
-        with:
-          version: 3.27.2
-
-      - name: Install python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install Scoop
-        uses: MinoruSekine/setup-scoop@v4.0.1
-
-      - name: install buf 'n stuff
-        run: scoop install buf ninja
-
-      - name: Install dependencies
-        uses: crazy-max/ghaction-chocolatey@v3
-        with:
-          args: install -y conan git 7zip jq
+      - name: Cancelling - release already exists
+        uses: andymckay/cancel-action@0.2
+        if: steps.release_exists.outputs.id != ''
 
 
-      # Ensures that things installed with choco are visible to us
-      - name: refresh env
-        run: |
-          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
-          refreshenv
+  # TODO (RSDK-10638) - uncomment and make all this work once we have good rust-utils windows builds
+  #build_windows:
+    ##if: github.repository_owner == 'viamrobotics'
+    #needs: [prepare]
+    #runs-on: windows-latest
+    #strategy:
+      #fail-fast: false
+      #matrix:
+        #include:
+          #- target: x86_64-windows
+            #platform: windows_x86_64
+    #steps:
+      #- name: Checkout Code
+        #uses: actions/checkout@v4
+        #with:
+          #ref: ${{ needs.prepare.outputs.sha }}
 
-      - name: Create package
-        shell: powershell
-        run: |
-          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
-          refreshenv
-          conan profile detect
-          conan create . `
-            --build=missing `
-            -o "&:shared=False" `
-            -s:h compiler.cppstd=17 `
-            -c:h tools.microsoft:winsdk_version=10.0.17763.0 `
-            -s:h compiler.runtime=static
-        env:
-          CONAN_USER_HOME: c:/cache
-          CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
+      #- name: Install cmake
+        #uses: ssrobins/install-cmake@v1
+        #with:
+          #version: 3.27.2
 
-      - name: list stuff
-        run: |
-          ls
-          ls build/
+      #- name: Install python
+        #uses: actions/setup-python@v5
+        #with:
+          #python-version: '3.12'
 
-      - name: Copy
-        run: |
-          cmake --install build --prefix builds/viam-cpp-sdk-${{ matrix.platform }}
+      #- name: Install Scoop
+        #uses: MinoruSekine/setup-scoop@v4.0.1
 
-      - name: Create tar
-        run: |
-          tar -czvf builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz builds/viam-cpp-sdk-${{ matrix.platform }}
+      #- name: install buf 'n stuff
+        #run: scoop install buf ninja
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: viam-cpp-sdk-${{ matrix.platform }}.tar.gz
-          path: builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz
+      #- name: Install dependencies
+        #uses: crazy-max/ghaction-chocolatey@v3
+        #with:
+          #args: install -y conan git 7zip jq
+
+
+      ## Ensures that things installed with choco are visible to us
+      #- name: refresh env
+        #run: |
+          #Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
+          #refreshenv
+
+      #- name: Create package
+        #shell: powershell
+        #run: |
+          #Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
+          #refreshenv
+          #conan profile detect
+          #conan create . `
+            #--build=missing `
+            #-o "&:shared=False" `
+            #-s:h compiler.cppstd=17 `
+            #-c:h tools.microsoft:winsdk_version=10.0.17763.0 `
+            #-s:h compiler.runtime=static
+        #env:
+          #CONAN_USER_HOME: c:/cache
+          #CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
+
+      #- name: list stuff
+        #run: |
+          #ls
+          #ls build/
+
+      #- name: Copy
+        #run: |
+          #cmake --install build --prefix builds/viam-cpp-sdk-${{ matrix.platform }}
+
+      #- name: Create tar
+        #run: |
+          #tar -czvf builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz builds/viam-cpp-sdk-${{ matrix.platform }}
+
+      #- name: Upload artifacts
+        #uses: actions/upload-artifact@v4
+        #with:
+          #name: viam-cpp-sdk-${{ matrix.platform }}.tar.gz
+          #path: builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz
 
   build_macos:
     if: github.repository_owner == 'viamrobotics'
@@ -349,7 +350,7 @@ jobs:
           path: builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz
 
   release:
-    needs: [prepare, build_macos, build_linux_debian, build_linux_ubuntu_jammy, build_windows]
+    needs: [prepare, build_macos, build_linux_debian, build_linux_ubuntu_jammy]
     if: github.repository_owner == 'viamrobotics'
     runs-on: ubuntu-latest
 
